--- a/DevPro.ipynb
+++ b/DevPro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrJ61YBqM3Wwq7Gjv5mtU1",
+      "authorship_tag": "ABX9TyPKSKWebwmP4J816UcU1lNb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,17 +29,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Python Brasil [Exercícios Python](https://wiki.python.org.br/*ListaDeExercicios*)"
+        "PythonPro_Brasil [Exercícios Python](https://wiki.python.org.br/EstruturaSequencial) "
       ],
       "metadata": {
-        "id": "sI2ALRX4uh_7"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "augcDG1QjrSl"
+        "id": "kc0Fzi6NARxS"
       }
     },
     {
@@ -172,7 +165,7 @@
         "id": "kTN0J6nvE-ki",
         "outputId": "f71e00cd-0508-4837-9ddf-a3fe81502b61"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +194,7 @@
         },
         "outputId": "be278abe-a158-4407-ae47-8478d9c85bef"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +222,7 @@
         "id": "IGCPRJDhSEyQ",
         "outputId": "99fc6f61-186d-4053-d08a-53391871ef1b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,10 +239,173 @@
       "cell_type": "code",
       "source": [
         "#Faça um Programa que peça a temperatura em graus Fahrenheit, transforme e mostre a temperatura em graus Celsius.\n",
-        "C = 5 * ((F-32) / 9).\n"
+        "f = float(input('Digite a temperatura em graus Fahrenheit: '))\n",
+        "fah = float(((f-32) * 5) / 9)\n",
+        "c = fah\n",
+        "print(f'{f} °F corresponde a {c} °C')\n"
       ],
       "metadata": {
-        "id": "6d-gXqvYVVC5"
+        "id": "6d-gXqvYVVC5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de8acb0c-f7e4-403d-f73f-128363d48c68"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a temperatura em graus Fahrenheit: 7\n",
+            "7.0 °F corresponde a -13.88888888888889 °C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Faça um Programa que peça a temperatura em graus Celsius, transforme e mostre em graus Fahrenheit.\n",
+        "c = float(input('Digite a temp. em Célcios: '))\n",
+        "cel = float(((c* 9 /5 ) +32))\n",
+        "f = cel\n",
+        "print(f'{c} ° C corresponde a {f} ° Fah')\n"
+      ],
+      "metadata": {
+        "id": "9vSiK8UpVt_6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0cf29efe-ced2-4ab0-97fa-5f96b428f64e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a temp. em Célcios: 7\n",
+            "7.0 ° C corresponde a 44.6 ° Fah\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#''' Faça um Programa que peça 2 números inteiros e um número real. Calcule e mostre:\n",
+        "#(A) o produto do dobro do primeiro com metade do segundo (B) a soma do triplo do primeiro com o terceiro. (C) o terceiro elevado ao cubo'''\n",
+        "#class Numero:\n",
+        "numero_1 = float(input(''))\n",
+        "numero_2 = float(input(''))\n",
+        "numero_3 = int(input(''))\n",
+        "n1 = numero_1 * 2 + (numero_2 /2)\n",
+        "n2 = numero_1  *3 + 1E3\n",
+        "n3 = numero_3 ** 3\n",
+        "print(f'{n1}  e {n2}  e  {n3}')\n"
+      ],
+      "metadata": {
+        "id": "YaPb1EzAV1Yx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aeb87ff4-45e1-405d-926a-38269a920edf"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "777\n",
+            "999\n",
+            "333\n",
+            "2053.5  e 3331.0  e  36926037\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Estrutura de Decisão**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "58Cof8uOCApz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Faça um Programa que peça dois números e imprima o maior deles.\n",
+        "n1 = input('')\n",
+        "n2 = input('')\n",
+        "if (n1) > (n2):\n",
+        "  print('O primeiro número é maior!')\n",
+        "elif (n1) == (n2):\n",
+        "  print('Os números são iguais!')\n",
+        "else:\n",
+        "  print('O segundo número é maior!')\n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_XBjT60zAD2z",
+        "outputId": "9b8c9ded-efb4-441e-a8a5-6402548f500a"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n",
+            "777\n",
+            "O segundo número é maior!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Faça um Programa que peça um valor e mostre na tela se o valor é positivo ou negativo.\n",
+        "n = int(input(''))\n",
+        "if (n % 2) == 0:\n",
+        "  print('Número PAR')\n",
+        "else:\n",
+        "  print('Número ÍMPAR')\n"
+      ],
+      "metadata": {
+        "id": "JL2ZN9Y4HmDL",
+        "outputId": "84c04861-6787-407a-d8fa-1fd3b863b4fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "Número ÍMPAR\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Faça um Programa que verifique se uma letra digitada é \"F\" ou \"M\". Conforme a letra escrever: F - Feminino, M - Masculino, Sexo Inválido.\n"
+      ],
+      "metadata": {
+        "id": "C01AMoa4Moy8"
       },
       "execution_count": null,
       "outputs": []
@@ -257,10 +413,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#Faça um Programa que peça a temperatura em graus Celsius, transforme e mostre em graus Fahrenheit.\n"
+        "#Faça um Programa que verifique se uma letra digitada é vogal ou consoante.\n"
       ],
       "metadata": {
-        "id": "9vSiK8UpVt_6"
+        "id": "5vbVl6VxM5X4"
       },
       "execution_count": null,
       "outputs": []
@@ -268,13 +424,51 @@
     {
       "cell_type": "code",
       "source": [
-        "#Faça um Programa que peça 2 números inteiros e um número real. Calcule e mostre:\n"
+        "#Faça um programa para a leitura de duas notas parciais de um aluno. O programa deve calcular a média alcançada por aluno e apresentar:\n",
+        "#A mensagem \"Aprovado\", se a média alcançada for maior ou igual a sete;\n",
+        "#A mensagem \"Reprovado\", se a média for menor do que sete;\n",
+        "#A mensagem \"Aprovado com Distinção\", se a média for igual a dez.\n",
+        "\n",
+        "#class Notas:\n",
+        "#notas = (n1), (n2)\n",
+        "n1 = float(input('Nota 1: '))\n",
+        "n2 = float(input('Nota 2: '))\n",
+        "media = float(n1 + n2) / 2\n",
+        "if media >= 7 <10:\n",
+        "  print('Aprovado')\n",
+        "elif media < 7:\n",
+        "  print('Reprovado')\n",
+        "else:\n",
+        "  media == 10\n",
+        "print('Aprovado com Distinção')\n"
       ],
       "metadata": {
-        "id": "YaPb1EzAV1Yx"
+        "id": "76YO-f0QM_px",
+        "outputId": "625d86fa-ca2d-4980-af30-81110c2004a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nota 1: 10\n",
+            "Nota 2: 10\n",
+            "Aprovado\n",
+            "Aprovado com Distinção\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "KLQDjV-_lBZf"
+      }
     }
   ]
 }
